--- a/package.json
+++ b/package.json
@@ -1,11 +1,22 @@
 {
-  "name": "learn",
+  "name": "sass-dev-tool",
   "version": "1.0.0",
   "description": "Landing page",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile:sass" : "node-sass sass/main.scss css/style.css -w"
   },
   "author": "Shimul",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mhshimul85/scss-dev.git"
+  },
+  "bugs": {
+    "url": "https://github.com/mhshimul85/scss-dev/issues"
+  },
+  "homepage": "https://github.com/mhshimul85/scss-dev#readme",
+  "devDependencies": {
+    "node-sass": "^4.14.1"
+  }
 }
